<resources>
    <string name="app_name">GroceryStore</string>
    <string name="first_tab">Main</string>
    <string name="second_tab">Search</string>
    <string name="third_tab">Basket</string>
    <string name="forth_tab">Account</string>
    <string name="category_image_content_description">category image</string>

    <string name="null_string">null</string>
    <string name="grammes_string">г</string>
    <string name="rubles_string"> ₽</string>

    <string name="account_fragment_account">Account</string>
    <string name="password_fragment_account">Password:</string>
    <string name="name_fragment_account">Name:</string>
    <string name="email_fragment_account">Email:</string>
    <string name="id_fragment_account">Id:</string>
    <string name="log_out_fragment_account">Log out</string>

    <string name="prompt_category_list_item">Пекарня и кондитерские</string>
    <string name="prompt_1_info_dish_fragment">Рыба с овощами и рисом</string>
    <string name="prompt_2_info_dish_fragment">799 Р</string>
    <string name="prompt_3_info_dish_fragment">560г</string>
    <string name="prompt_4_info_dish_fragment">Рыба марированная со специями, лимонным соком</string>

    <string name="content_description_info_dish_fragment">image of the dish</string>
    <string name="put_in_the_basket_info_dish_fragment">put into the basket</string>

    <string name="sign_in_activity_login">Sign in</string>
    <string name="forgot_password_activity_login">forgot password?</string>
    <string name="using_your_account_of_google_activity_login">using your account of google</string>
    <string name="content_description_activity_login">logo</string>
    <string name="create_an_account_activity_login">Create an account</string>

    <string name="name_creating_account">Name</string>
    <string name="hint_name_creating_account">name and surname</string>
    <string name="email_creating_account">Email</string>
    <string name="repeat_password_creating_account">Repeat password</string>
    <string name="password_creating_account">Password</string>
    <string name="hint_password_creating_account">password must have at least 4 characters</string>
    <string name="main_test_creating_account">Creating account</string>
    <string name="create_an_account_creating_account">Create an account</string>

    <string name="upper_dote_string">*</string>
    <string name="write_a_code_activity_return_password">Write a code</string>
    <string name="letter_code_activity_return_password">We\'ve sent a letter with code to the email</string>
    <string name="incorrect_code_activity_return_password">Incorrect code</string>
    <string name="send_code_again_activity_return_password">send code again</string>
    <string name="check_a_code_activity_return_password">check a code</string>

    <string name="purchase_basket_fragment">Purchase </string>

    <string name="title_activity_login">GROCERY STORE</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="create_account_error">Error by creating account, try again</string>
    <string name="account_not_existed">An account doesn\'t existed</string>
    <string name="account_already_created">Email is already registered</string>
    <string name="user_creating_error">Error in creating User</string>

    <string name="not_open_this_dish">can\'t open this dish item</string>

    <string name="no_connection_1">No internet connection,\n try again later .</string>
    <string name="no_connection_2">No internet connection,\n try again later ..</string>
    <string name="no_connection_3">No internet connection,\n try again later ...</string>

    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be more 3 characters</string>
    <string name="invalid_name">Name should be more 6 characters and contains letters or digits</string>
    <string name="invalid_secondPassword">Passwords don\'t match</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name_text_fragment_account">name</string>
    <string name="account_text_fragment_account">Account</string>
    <string name="id_text_fragment_account">Id</string>
    <string name="email_text_fragment_account">Email</string>
    <string name="type_text_fragment_account">Type</string>
    <string name="settings_text_fragment_account">Settings</string>
    <string name="log_out_button_text_fragment_account">log out button</string>
    <string name="image_2_fragment_account">image</string>
    <string name="dish_photo">dish photo</string>
    <string name="green_salad">Зеленый салат</string>

</resources>